--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.9.5",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.5"
   }
 }
