--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
+    "cookies-parser": "^1.2.0",
+    "cor": "^0.0.0",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mailer": "^0.6.6",
     "mongoose": "^8.9.5",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "otp-generator": "^4.0.1",
