--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "cookies-parser": "^1.2.0",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
